home work #3 task 2 and 3 done

--- a/cw2my.html
+++ b/cw2my.html
@@ -12,8 +12,13 @@
   <!--<script src="js-cw/task-2.4cw.js"></script> -->
   <!--<script src="js-cw/task-2.5cw.js"></script> -->
   <!--<script src="js-cw/task-2.6cw.js"></script> -->
-  <script src="js-cw/task-2.7cw.js"></script> -->
+  <!--<script src="js-cw/task-2.7cw.js"></script> -->
   <!--<script src="js-cw/task-2.8cw.js"></script> -->
+  <!--<script src="js-cw/task-2.9cw.js"></script> -->
+  <!--<script src="js-cw/task-2.10cw.js"></script> -->
+  <!--<script src="js-cw/task-2.11cw.js"></script> -->
+  <!--<script src="js-cw/task-2.12cw.js"></script> -->
+  <script src="js-cw/task-2.13cw.js"></script> -->
 </body>
 
 </html>
