--- a/hw5.html
+++ b/hw5.html
@@ -37,7 +37,10 @@
    <title>hw5</title>
 </head>
 <body>
-
+   <!--<script src="js/task-5.1.js"></script> -->
+	<!--<script src="js/task-5.2.js"></script> -->
+	<!--<script src="js/task-5.3.js"></script> --> <!-- task 3 & 4-->
+	<!--<script src="js/task-5.5.js"></script> -->
 
 </body>
    <!-- Разметка страницы -->
