--- a/hw6.html
+++ b/hw6.html
@@ -188,14 +188,18 @@
             var filteredList;
             console.log(filteredList); 
 
-        8. Массив watchList содержит объекты с информацией о нескольких фильмах. Используйте reduce, чтобы найти средний рейтинг IMDB фильмов, снятых режиссером Кристофером Ноланом. Вспомните из предыдущих заданий filter и map. Вам может потребоваться создать другие переменные, но сохраните окончательное среднее значение в переменную AverageRating. Обратите внимание, что значения рейтинга сохраняются в виде строк в объекте и должны быть преобразованы в числа, прежде чем они будут использованы в любых математических операциях.
+        8. Массив watchList содержит объекты с информацией о нескольких фильмах. 
+        Используйте reduce, чтобы найти средний рейтинг IMDB фильмов, снятых режиссером Кристофером Ноланом. 
+        Вспомните из предыдущих заданий filter и map. Вам может потребоваться создать другие переменные, 
+        но сохраните окончательное среднее значение в переменную AverageRating. Обратите внимание, 
+        что значения рейтинга сохраняются в виде строк в объекте и должны быть преобразованы в числа, 
+        прежде чем они будут использованы в любых математических операциях.
      -->
 
     <!--<script src="js/task-6.1.js"></script> -->
 	<!--<script src="js/task-6.2.js"></script> -->
 	<!--<script src="js/task-6.3.js"></script> -->
-	<!--<script src="js/task-6.6.js"></script> -->
-    <script src="js/task-6.7.js"></script> -->
-    <!--<script src="js/task-6.8.js"></script> -->
+	<!--<script src="js/task-6.6.js"></script> -->        <!-- + Task 7 -->
+    <script src="js/task-6.8.js"></script> -->
 </body>
 </html>
