--- a/task7.2.html
+++ b/task7.2.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <button class="btn-modalbox">Show modal box</button>
+        <button class="btn-modalbox">Модальне вікно</button>
     </div>
 
     <script src="script7.2.js"></script>
