--- a/hw6.html
+++ b/hw6.html
@@ -199,7 +199,7 @@
     <!--<script src="js/task-6.1.js"></script> -->
 	<!--<script src="js/task-6.2.js"></script> -->
 	<!--<script src="js/task-6.3.js"></script> -->
-	<!--<script src="js/task-6.6.js"></script> -->        <!-- + Task 7 -->
-    <script src="js/task-6.8.js"></script> -->
+	<script src="js/task-6.6.js"></script> -->        <!-- + Task 7 -->
+    <!--<script src="js/task-6.8.js"></script> -->
 </body>
 </html>
