--- a/hw5.html
+++ b/hw5.html
@@ -38,8 +38,8 @@
 </head>
 <body>
    <!--<script src="js/task-5.1.js"></script> -->
-	<!--<script src="js/task-5.2.js"></script> -->
-	<script src="js/task-5.3.js"></script> --> <!-- task 3 & 4 & 5-->
+	<script src="js/task-5.2.js"></script> -->
+	<!--<script src="js/task-5.3.js"></script> --> <!-- task 3 & 4 & 5-->
 </body>
    <!-- Разметка страницы -->
 </html>
